<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.login.MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/MainTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/EditTextStyle"
                android:layout_marginTop="62dp"
                android:background="@drawable/custom_input_shape"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="15dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/EditTextStyle"
                android:layout_marginTop="62dp"
                android:background="@drawable/custom_input_shape"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="15dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="30sp"
        android:paddingBottom="5sp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="30sp"
        android:paddingBottom="5sp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_btn_shape"
        android:paddingHorizontal="60sp"
        android:text="@string/ingresar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_btn_shape_bordered"
        android:paddingHorizontal="30sp"
        android:text="@string/nuevo_usuario"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />

</androidx.constraintlayout.widget.ConstraintLayout>